--- a/.github/workflows/master_thierrybeaulieu.yml
+++ b/.github/workflows/master_thierrybeaulieu.yml
@@ -29,7 +29,10 @@ jobs:
           npm run test --if-present
 
       - name: Zip artifact for deployment
-        run: zip -r release.zip ./dist/*
+        run: |
+          cd app
+          cd dist
+          zip release.zip ./* -r
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
