--- a/.github/workflows/master_thierrybeaulieu.yml
+++ b/.github/workflows/master_thierrybeaulieu.yml
@@ -30,7 +30,7 @@ jobs:
 
       - name: Zip artifact for deployment
         run: |
-          zip release.zip ./app/dist -r
+          zip release.zip ./app/dist/* -r
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
