--- a/.github/workflows/master_thierrybeaulieu.yml
+++ b/.github/workflows/master_thierrybeaulieu.yml
@@ -12,6 +12,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read #This is required for actions/checkout
 
     steps:
       - uses: actions/checkout@v4
