--- a/.github/workflows/master_thierrybeaulieu.yml
+++ b/.github/workflows/master_thierrybeaulieu.yml
@@ -46,6 +46,9 @@ jobs:
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+    permissions:
+       id-token: write #This is required for requesting the JWT
+       contents: read #This is required for actions/checkout
 
     steps:
       - name: Download artifact from build job
